new_tests/semantics/type/bad/072_RT3.cm

class A {}
class B inherits A {}
class C inherits A {}
class D {}

def a:A = new A()
retype a = new D() 
